# COP4533-PA2-GreedyAlgorithms

./: CMakeLists.txt  README.md  input_handler.cpp  input_handler.h
data/input/: test_input1.txt  test_input2.txt  test_input3.txt  test_input4.txt
data/output/: OUTPUT.txt  test_output1.txt
src/: fifo.cpp  fifo.h  input_handler.cpp  lru.cpp  lru.h  optff.cpp  optff.h
